# Subdomain-Takeover-Checker

./: .gitignore  README.md  api.py  main.py  public_api.py  pyproject.toml  requirements.txt  services_data.py
templates/: index.html  learn.html  service.html
