[project]
name = "subdomchecker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dnspython>=2.8.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-limiter>=4.1.1",
    "gunicorn>=25.3.0",
    "python-dotenv>=1.2.2",
    "reportlab>=4.4.10",
    "requests>=2.33.1",
]
